--- a/lib/cg_help.wiki
+++ b/lib/cg_help.wiki
@@ -13,7 +13,8 @@ cg help displays help about a speific topic, or a general help overview if no to
 ; **topic**: display help about this specific topic
 
 == Options ==
-; **-format 0/1**: if 0 output help as ascii text to stdout; if 1 put in color and output via less
+; **-format 0/1/md**: if 0 output help as ascii text to stdout; if 1 put
+in color and output via less; use "md" for markdown output
 
 == Category ==
 Dev
