--- a/lib/cg_sam_clipamplicons.wiki
+++ b/lib/cg_sam_clipamplicons.wiki
@@ -14,4 +14,4 @@ Clip primers from aligned sequences in a sam file (by changing bases to N and qu
 ; **outfile**: directory containing reference genomes and variation data
 
 == Category ==
-Processing
+Process
