--- a/lib-exp/cg_convsolid.wiki
+++ b/lib-exp/cg_convsolid.wiki
@@ -21,5 +21,5 @@ The command expects the xsq tools (convertFromXSQ.sh) to be available in the PAT
 ; **projectfile**: project file
 
 == Category ==
-Conversion
+Depricated
 
