--- a/lib/cg_process_reports.wiki
+++ b/lib/cg_process_reports.wiki
@@ -42,4 +42,4 @@ This command can be distributed on a cluster or using multiple threads with
 [[joboptions|job options]] (more info with cg help joboptions)
 
 == Category ==
-report
+Process
