--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -12,12 +12,13 @@ sample data that can come from various sources.
 
 The command expects a basic genomecomb sample directory (as described
 extensively in [[projectdir]]) It generates all kinds of result data
-(variant calls, sequenced regions, ...) analyses and reports. Several
-types of source data (fastq files, Complete Genomics analysis dir, ...)
-are supported. The directory containing the original starting data can be
-given as an option, an argument, or it can be present in a dir named ori
-in the sample dir. If given as an argument, a link named ori to the
-original data will be made. The results (which analyses, etc.) differ
+(variant calls, sequenced regions, ...) analyses and reports. 
+
+Several types of source data (fastq files, Complete Genomics analysis dir,
+...) are supported. The directory containing the original starting data
+can be given as an option, an argument, or it can be present in a dir
+named ori in the sample dir. If given as an argument, a link named ori to
+the original data will be made. The results (which analyses, etc.) differ
 according to the type of original data, the parameters given (e.g. use
 -amplicons for amplicon sequencing) and files in the sampledir.
 
@@ -120,9 +121,15 @@ these result files are named var-sam-rdsbwa-sample1.tsv,
 sreg-sam-rdsbwa-sample1.tsv, varall-sam-rdsbwa-sample1.tsv,
 reg_cluster-sam-rdsbwa-S0489.tsv
 
+If the experiment used e.g. exome capture, this can be indicated by the
+presence of a file named reg_targets.tsv (or matching reg_*_targets*.tsv)
+in the sampledir (or the option -targetfile). If present, coverage
+statistics will be calculated for this region using picard
+CalculateHsMetrics.
+
 === Amplicon sequencing ===
 Amplicon sequencing samples are indicated by the presence of a file named
-reg_amplicons.tsv (or matching reg_*_amplicons.tsv) in the sampledir. If
+reg_amplicons.tsv (or matching reg_*_amplicons*.tsv) in the sampledir. If
 the option -amplicons is given to the command, a link to the given
 ampliconfile will be created in the sampledir and used. If an ampliconfile
 (or link) already exists in the sampledir, it will NOT be overwritten!
@@ -166,4 +173,4 @@ project. vcf files (var-*.vcf) will be converted to tsv files, and their
 variants included in the multicompar.
 
 == Category ==
-Processing
+Process
