--- a/lib/cg_help.wiki
+++ b/lib/cg_help.wiki
@@ -7,7 +7,7 @@ cg help ?options? ?topic?
 display help
 
 == Description ==
-cg help displays help about a speific topic, or a general help overview if no topic is given
+cg help displays help about a specific topic, or a general help overview if no topic is given
 
 == Arguments ==
 ; **topic**: display help about this specific topic
