process_sample_cgi_job fix: coverage and refscore were no longer in var files, allways annotate  bcol if extension is .bcol

--- a/lib/cg_cg2tsv.wiki
+++ b/lib/cg_cg2tsv.wiki
@@ -6,6 +6,8 @@ cg cg2tsv ?options? cgvarfile ?cggenefile? outputfile
 == Summary ==
 Converts data in Complete Genomics format to tsv (tab separated, simple feature table) format.
 The command will also sort the tsv appropriately.
+The cggenefile is optional. It contains the CG gene annotations, which can be (best) left out as
+these annotations (and more) can be done in genomecomb.
 
 == Arguments ==
 ; **cgvarfile**: Complete genomics var file to be converted. File may be compressed.
