--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -14,7 +14,8 @@ will be included in the result. Other types of headers are supported (CGI style,
 
 == Arguments ==
 ; **datafile**: file to be scanned, if not given, uses stdin. File may be compressed.
-; **outfile**: write results to outfile, if not given, uses stdout
+; **outfile**: write results to outfile, if not given, uses stdout. If outfile has an extension
+indicating compression (e.g. .lz4), the output file will be compressed using the proper method.
 
 == Options ==
 ; **-q query**: only lines fullfilling conditions in query will be written to outfile (see further)
