--- a/lib/cg_process_illumina.wiki
+++ b/lib/cg_process_illumina.wiki
@@ -97,7 +97,7 @@ if 1, bam files are realigned using gatk, use **value** srma to align using srma
 ; **-dbfile file**: Use **file** for extra (files in **dbdir** are already used) annotation 
 ; **-conv_nextseq 1/0**: generate fastqs for nextseq run & create sample folders - rundir should be placed in projectdir
 of resulting variants. This option can be added multiple times (with different files)
-; **-targetfile targetfile**: if targetfile is provided, coverage statistics will be calculated for this region using picard CalculateHsMetrics
+; **-targetfile targetfile**: if targetfile is provided, coverage statistics will be calculated for this region
 ; **-m maxopenfiles** (-maxopenfiles): The number of files that a program
 can keep open at the same time is limited. pmulticompar will distribute
 the subtasks thus, that the number of files open at the same time stays
