--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -70,7 +70,7 @@ analysis (see further) using the amplicons defained in **ampliconfile**
 ; -targetfile targetfile: if targetfile is provided, coverage statistics will be calculated for this region
 ; -reports list: use all (default) for creating all reports. If you only
 want some made, give these as a space separated list. Possible reports are:
-flagstats fastqc vars hsmetrics covered
+flagstat_reads flagstat_alignments fastqc histodepth vars hsmetrics covered
 ; -samBQ number: only for samtools; minimum base quality for a base to be considered (samtools --min-BQ option)
 
 == Sample types ==
